@@ -15,7 +15,7 @@ figures/ppp.png \
 figures/settings.png \
 figures/wavelan.png
 
-DOC_LINGUAS = de el es fr pt_BR sv
+DOC_LINGUAS = de el fr pt_BR sv
 # Migration needed (see INSTRUCTIONS http://live.gnome.org/GnomeDocUtilsTranslationMigration)
 # DOC_LINGUAS = cs ru es
 #
