@@ -1,3 +1,8 @@
+2008-08-24  Jörgen Scheibengruber  <mfcn@gmx.de>
+
+	* Makefile.am:
+	Remove es for now, it breaks the build
+
 2008-05-27  Jonh Wendell  <jwendell@gnome.org>
 
 	* Makefile.am: Added pt_BR to DOC_LINGUAS.
