@@ -1,3 +1,8 @@
+2008-08-24  Jörgen Scheibengruber  <mfcn@gmx.de>
+
+	* src/netspeed.c (update_applet):
+	Patch by Marius Gedminas; Should fix #503518
+
 2008-03-04  Jaap Haitsma  <jaap@haitsma.org>
 
 	* icons/Makefile.am:
